# tanks.game

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Tank.cpp  Tank.hpp  Tanks  cmake_install.cmake  config.txt  makefile  tanksgame  tanksgame.cbp  tanksgame.kdev4
.kdev4/: tanksgame.kdev4
New Group/: Game.cpp
assets/maps/: map1.txt  map2.txt
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake
include/: Background.h  BasePacket.h  Bullet.h  Collider.h  Component.h  Configuration.h  ECS.h  Game.h  GameObject.h  JoinResponsePacket.h  Main.h  Manager.h  Map.h  Menu.h  NetManager.h  Player.h  PowerUpType.h  Projection.h  Room.h  Scene.h  SoundManager.h  Sprite.h  TCPConnection.h  Tank.h  TankSprite.h  Text.h  Texture.h  Timer.h  UniversalPacket.h  Vector2D.h  Wall.h  WindowManager.h
include/Collisions/: Collider.h  Vector2D.h
include/Connection/: BasePacket.h  BulletInfoPacket.h  CurrentPositionPacket.h  EventPacket.h  HeartbeatPacket.h  InfoRequestPacket.h  JoinRequestPacket.h  JoinResponsePacket.h  LastPlayerSentPacket.h  MapDataPacket.h  NetManager.h  NetPlayer.h  PlayerDeadPacket.h  PlayerDisconnectedPacket.h  PlayerJoinedPacket.h  PlayerReadyPacket.h  PowerUpPacket.h  ScoreInfoPacket.h  SyncPacket.h  TCPConnection.h  UDPConnection.h  UniversalPacket.h
include/GUIElement/: Button.h  TextStatic.h  _Element.h
include/GameObject/: Bullet.h  GameObject.h  Player.h  PowerUp.h  (+2 more)
src/: Background.cpp  Bullet.cpp  Collider.cpp  Configuration.cpp  Game.cpp  GameObject.cpp  JoinResponsePacket.cpp  Main.cpp  Manager.cpp  Map.cpp  Menu.cpp  NetManager.cpp  Player.cpp  PlayerDisconnectedPacket.cpp  Projection.cpp  Room.cpp  Scene.cpp  SoundManager.cpp  Sprite.cpp  TCPConnection.cpp  Tank.cpp  TankSprite.cpp  Text.cpp  Texture.cpp  Timer.cpp  UniversalPacket.cpp  Vector2D.cpp  Wall.cpp  WindowManager.cpp  main.cpp
tanksgame-osx.xcodeproj/: project.pbxproj
(+103 files in other folders)
